<resources>
    <string name="app_name">Injectr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_purge">Purge old photos</string>

    <string name="record_injection">Record a new injection</string>
    <string name="save_injection_button">Save</string>
    <string name="inject_photo">Take photo</string>
    <string name="injection_photo_description">Injection Photograph</string>
    <string name="injection_photo_error">Could not take photo</string>
    <string name="injection_position_hint">Position</string>
    <string name="injection_depth_label">injection depth %dmm</string>
    <string name="injection_comment_hint">Comment</string>
    <string name="injection_confirm">Save without photo?</string>
    <string name="injection_depth_value">%1$dmm</string>
    <string name="inject_switch_camera">Switch camera</string>
    <string name="inject_toggle_flash">Toggle flash</string>
    <string name="camera">Camera</string>
    <string name="expand_image">Expand image\n</string>
    <string name="swipe_to_delete">Swipe to delete</string>
</resources>
