<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottom_sheet_inject"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        tools:context=".inject.InjectFragment"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_peekHeight="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@android:color/darker_gray"
            app:elevation="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bottom_sheet_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <ImageButton
                android:src="@drawable/ic_flash_on_black_24dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/toggleFlashButton"
                app:layout_constraintTop_toTopOf="@+id/takePhotoButton"
                app:layout_constraintBottom_toBottomOf="@+id/takePhotoButton"
                android:contentDescription="@string/inject_toggle_flash"
                app:layout_constraintStart_toEndOf="@+id/switchCameraButton" android:layout_marginStart="8dp"/>
        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/switchCameraButton"
                android:src="@drawable/ic_switch_camera_black_24dp"
                android:contentDescription="@string/inject_switch_camera"
                app:layout_constraintTop_toTopOf="@+id/takePhotoButton"
                app:layout_constraintBottom_toBottomOf="@+id/takePhotoButton"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/inject_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/takePhotoButton"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <androidx.camera.view.PreviewView
                android:id="@+id/camera_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/toggleFlashButton" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp">
        </androidx.camera.view.PreviewView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
