<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".inject.InjectFragment">
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="10"
            android:progress="1"
            android:id="@+id/depthSeekBar" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            android:min="4" app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline3"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveInjectionButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/save_injection_button" android:text="@string/save_injection_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <io.fotoapparat.view.CameraView
            android:id="@+id/camera_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/saveInjectionButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/guideline2" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/inject_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/takePhotoButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
    <ImageView
            android:src="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/injection_photo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            android:contentDescription="@string/injection_photo_description"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/takePhotoButton"
            app:layout_constraintEnd_toStartOf="@id/guideline2" android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>